# Skillsense

./: .gitignore  LICENSE  README.md  pyproject.toml
.skillsense.example/: config.json
docs/: generic-evidence-adapter.md
examples/generic_evidence/: cursor.jsonl  custom_agent_writer.py
examples/sample_project/: README.md
examples/sample_skill/: SKILL.md
skillsense/: __init__.py  cli.py  config.py  detector.py  evidence.py  indexer.py  interventions.py  metadata.py  models.py  recommender.py  reporter.py  scanner.py
skillsense/adapters/: __init__.py  claude_code.py  codex.py  generic.py
skillsense/templates/: dashboard.html
tests/: test_cli.py  test_evidence.py  test_interventions.py  test_release_readiness.py
