[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillsense"
version = "0.1.0"
description = "A low-noise observability and recommendation layer for Agent Skills."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SkillSense" }]
license = { text = "MIT" }
keywords = ["agent", "skills", "cli", "observability", "recommendation"]
dependencies = []

[project.scripts]
skillsense = "skillsense.cli:main"

[tool.setuptools.packages.find]
include = ["skillsense*"]

[tool.setuptools.package-data]
skillsense = ["templates/*.html"]
