[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillsense"
version = "0.1.0"
description = "Local-first observability dashboard for AI agent skill evidence."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SkillSense" }]
license = { text = "MIT" }
keywords = ["ai-agents", "agent-skills", "llm-agents", "codex", "claude-code", "observability", "developer-tools", "dashboard", "privacy", "local-first", "cli"]
dependencies = []

[project.scripts]
skillsense = "skillsense.cli:main"

[tool.setuptools.packages.find]
include = ["skillsense*"]

[tool.setuptools.package-data]
skillsense = ["templates/*.html"]
